--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
   box-sizing: border-box;
   user-select: none;
 }
-body {
+/* body {
     margin-bottom: 950px;
-}
+} */
 /* .bg-img{
   background: url('bg.jpg');
   height: 100vh;
@@ -33,13 +33,12 @@ video {
   }
 .content{
   position: absolute;
-  margin-top: 110px;
   top: 50%;
   left: 50%;
   z-index: 999;
   text-align: center;
   padding: 20px;
-  width: 370px;
+  width: 70%;
   transform: translate(-50%,-50%);
   background: rgba(255,255,255,0.04);
   box-shadow: -1px 4px 28px 0px rgba(0,0,0,0.75);
