--- a/style.css
+++ b/style.css
@@ -5,24 +5,10 @@
   box-sizing: border-box;
   user-select: none;
 }
-/* body {
-    margin-bottom: 950px;
-} */
-/* .bg-img{
-  background: url('bg.jpg');
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
+body {
+    margin-bottom: 1000px;
 }
-.bg-img:after{
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0,0,0,0.7);
-} */
+
 video {
     object-fit: cover;
     width: 100vw;
@@ -33,12 +19,13 @@ video {
   }
 .content{
   position: absolute;
+  margin-top: 9%;
   top: 50%;
   left: 50%;
   z-index: 999;
   text-align: center;
   padding: 20px;
-  width: 70%;
+  width: 85%;
   transform: translate(-50%,-50%);
   background: rgba(255,255,255,0.04);
   box-shadow: -1px 4px 28px 0px rgba(0,0,0,0.75);
@@ -301,9 +288,14 @@ button {
     text-align: justify;
     padding-left: 5%;
     padding-right: 5%;
+    font-size: 16px;
 }
 .container {
     margin-bottom: 20px;
+}
+.my-link a{
+  color: rgb(9, 185, 56);
+  text-decoration: none;
 }
 .image-container {
     display: flex;
@@ -325,128 +317,3 @@ button {
     font-family: 'Poppins', sans-serif;
     font-size: 10px;
 }
-.content header{
-  color: white;
-  font-size: 33px;
-  font-weight: 600;
-  margin: 0 0 35px 0;
-  font-family: 'Montserrat',sans-serif;
-}
-.field{
-  position: relative;
-  height: 45px;
-  width: 100%;
-  display: flex;
-  background: rgba(255,255,255,0.94);
-}
-.field span{
-  color: #222;
-  width: 40px;
-  line-height: 45px;
-}
-.field input{
-  height: 100%;
-  width: 100%;
-  background: transparent;
-  border: none;
-  outline: none;
-  color: #222;
-  font-size: 16px;
-  font-family: 'Poppins',sans-serif;
-}
-.space{
-  margin-top: 16px;
-}
-.show{
-  position: absolute;
-  right: 13px;
-  font-size: 13px;
-  font-weight: 700;
-  color: #222;
-  display: none;
-  cursor: pointer;
-  font-family: 'Montserrat',sans-serif;
-}
-.pass-key:valid ~ .show{
-  display: block;
-}
-.pass{
-  text-align: left;
-  margin: 10px 0;
-}
-.pass a{
-  color: white;
-  text-decoration: none;
-  font-family: 'Poppins',sans-serif;
-}
-.pass:hover a{
-  text-decoration: underline;
-}
-.field input[type="submit"]{
-  background: #3498db;
-  border: 1px solid #2691d9;
-  color: white;
-  font-size: 18px;
-  letter-spacing: 1px;
-  font-weight: 600;
-  cursor: pointer;
-  font-family: 'Montserrat',sans-serif;
-}
-.field input[type="submit"]:hover{
-  background: #2691d9;
-}
-.login{
-  color: white;
-  margin: 20px 0;
-  font-family: 'Poppins',sans-serif;
-}
-.links{
-  display: flex;
-  cursor: pointer;
-  color: white;
-  margin: 0 0 20px 0;
-}
-.facebook,.instagram{
-  width: 100%;
-  height: 45px;
-  line-height: 45px;
-  margin-left: 10px;
-}
-.facebook{
-  margin-left: 0;
-  background: #4267B2;
-  border: 1px solid #3e61a8;
-}
-.instagram{
-  background: #E1306C;
-  border: 1px solid #df2060;
-}
-.facebook:hover{
-  background: #3e61a8;
-}
-.instagram:hover{
-  background: #df2060;
-}
-.links i{
-  font-size: 17px;
-}
-i span{
-  margin-left: 8px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  font-size: 16px;
-  font-family: 'Poppins',sans-serif;
-}
-.signup{
-  font-size: 15px;
-  color: white;
-  font-family: 'Poppins',sans-serif;
-}
-.signup a{
-  color: #3498db;
-  text-decoration: none;
-}
-.signup a:hover{
-  text-decoration: underline;
-}
-
