--- a/style.css
+++ b/style.css
@@ -8,27 +8,11 @@
 html {
   scroll-behavior: smooth;
 }
-/* body {
-    margin: 50%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+body {
+    padding-bottom: 1280px;
     
-} */
-/*@media (min-width:1500px) {
-  body {
-    margin-bottom: 1300px;
-  }
-} */
-/*@media (min-width:500px) {
-  body {
-    margin-bottom: 1450px!important;
-  }
 }
-@media (min-width:1100px) {
-  body {
-    margin-bottom: 1500px!important;
-  }
-} */
+
 video {
     object-fit: cover;
     width: 100%;
@@ -39,7 +23,7 @@ video {
   }
 .content{
   position: absolute;
-  /* margin-top: 14%; */
+  margin-top: 14%;
   top: 50%;
   left: 50%;
   z-index: 999;
@@ -51,41 +35,7 @@ video {
   box-shadow: -1px 4px 28px 0px rgba(0,0,0,0.75);
   border-radius: 10px;
 }
-/* @media (min-width:350px){
-  .content {
-    margin-top: 0;
-   }
-}
-@media (min-width:487px){
-  .content{
-    margin-top: 4%;
-   }
-}
-@media (min-width:500px){
-  .content {
-    margin-top: 7%;
-   }
-}
- @media (min-width:540px){
-  .content {
-    margin-top: 15%;
-   }
-}
-@media (min-width:620px){
-   .content {
-    margin-top: 25%;
-    }
-}
-@media (min-width:780px){
-  .content {
-    margin-top: 30%;
-   }
-}
-@media (min-width:880px){
-  .content {
-    margin-top: 38%;
-   }
-} */
+
 .box {
     align-content: center   !important;
 position: relative;
