--- a/style.css
+++ b/style.css
@@ -351,3 +351,7 @@ button {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
 }
+.note p {
+    color: #8e8f8b;
+    font-size: 14px;
+}
