--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Poppins:400,500&display=swap');
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap");
+
 *{
   margin: 0;
   padding: 0;
@@ -207,6 +210,7 @@ button {
     border-radius: 5px;
     width: 100%;
     height: 55px;
+    cursor: pointer;
   }
   button a{
     color: #ffffff;
@@ -309,6 +313,7 @@ button {
     line-height: 35px;
     letter-spacing: 1px;
 }
+
 .container {
     margin-bottom: 20px;
 }
@@ -356,12 +361,139 @@ button {
     padding-right: 5%;
     text-align: end;
 }
-.container strong {
-    color: #8e8f8b;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-}
+
 .note p {
     color: #ffffff;
     font-size: 14px;
+}
+
+
+
+.center {
+  width: 90%;
+  margin: auto;
+}
+section button {
+  color: #000;
+  text-decoration: none;
+  text-align: center;
+  padding: 10px;
+  display: block;
+  font-size: 1.3em;
+  letter-spacing: 3px;
+  overflow: hidden;
+}
+
+section .hidden {
+  padding: 10px;
+  font-family: ;
+  overflow: hidden;
+  height: 0;
+  opacity: 0;
+  background-color: rgba(0,0,0,0.4);
+  color: #fff;
+  overflow: hidden;
+  letter-spacing: 2px;
+  border: 4px solid black;
+  border-bottom-left-radius: 20px;
+}
+
+section:target .hidden {
+  height: 100%;
+  opacity: 1;
+  padding: 20px;
+}
+
+section p{
+  color: white;
+  text-align: justify;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 25px;
+  line-height: 35px;
+  letter-spacing: 1px;
+}
+
+section {
+  margin-bottom: 10px;
+}
+
+section strong {
+  color: #8e8f8b;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+}
+.column {
+  padding-left: 5%;
+  float: left;
+  width: 50%;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.glow-on-hover {
+  margin-left: 50%;
+  margin-right: 50%;
+  margin-bottom: 20px;
+  width: auto;
+  height: auto;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: linear-gradient(315deg, #00ccff, #d400d4);!important;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
+}
+
+.glow-on-hover:active {
+  color: #000
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(315deg, #00ccff, #d400d4);!important;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
 }
