--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ video {
 }
 @media (min-width:992px){
   .content {
-       margin-top: 10%;
+       margin-top: 15%;
    }
 }
 
@@ -230,7 +230,7 @@ button {
   button::before {
     content: "";
     position: absolute;
-    inset: 2px;
+    inset: 5px;
     background: linear-gradient(315deg, #00ccff, #d400d4);
     border-radius: 5px;
   }
@@ -248,17 +248,17 @@ button {
   button i::before {
     content: "";
     position: absolute;
-    width: 10px;
-    height: 2px;
+    width: 20px;
+    height: 5px;
     left: 80%;
     top: -2px;
-    border: 2px solid var(--clr);
+    border: 3px solid var(--clr);
     background: #282222;
     transition: 0.2s;
   }
   
   button:hover i::before {
-    width: 15px;
+    width: 30px;
     left: 20%;
     animation: move 3s infinite;
   }
@@ -266,17 +266,17 @@ button {
   button i::after {
     content: "";
     position: absolute;
-    width: 10px;
-    height: 2px;
+    width: 20px;
+    height: 5px;
     left: 20%;
     bottom: -2px;
-    border: 2px solid var(--clr);
+    border: 3px solid var(--clr);
     background: #272822;
     transition: 0.2s;
   }
   
   button:hover i::after {
-    width: 15px;
+    width: 30px;
     left: 80%;
     animation: move 3s infinite;
   }
@@ -395,7 +395,7 @@ section .hidden {
   color: #fff;
   overflow: hidden;
   letter-spacing: 2px;
-  border: 4px solid black;
+  border: 4px solid rgb(47, 58, 69);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
