--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ margin-right: auto;
 	color: #ffffff;
 	border-radius: 10px;
 	box-shadow: 0px 10px 10px rgba(0,0,0,0.8);
-	background: rgb(24, 23, 23) 0.1;
+	background: rgb(24, 23, 23,0.7);
 	margin: 5px;
 	transition: 1s;
 }
