--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ button {
   background-size: 200% auto;
   color: #fff;
   background-clip: text;
-  text-fill-color: transparent;
+  color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
@@ -387,7 +387,6 @@ section button {
 
 section .hidden {
   padding: 10px;
-  font-family: ;
   overflow: hidden;
   height: 0;
   opacity: 0;
@@ -431,7 +430,6 @@ section strong {
   width: 50%;
 }
 .row:after {
-  content: "";
   display: table;
   clear: both;
 }
@@ -450,7 +448,7 @@ section strong {
   border: none;
   outline: none;
   color: #fff;
-  background: linear-gradient(315deg, #00ccff, #d400d4);!important;
+  background: linear-gradient(315deg, #00ccff, #d400d4)!important;
   cursor: pointer;
   position: relative;
   z-index: 1;
@@ -492,7 +490,7 @@ section strong {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(315deg, #00ccff, #d400d4);!important;
+  background: linear-gradient(315deg, #00ccff, #d400d4)!important;
   left: 0;
   top: 0;
   border-radius: 10px;
