--- a/style.css
+++ b/style.css
@@ -356,6 +356,7 @@ button {
 .image-container img {
     width: 35px;
     height: 35px;
+    margin: 5px;
 }
 .last{
     align-items: end;
@@ -501,3 +502,10 @@ section strong {
   50% { background-position: 400% 0; }
   100% { background-position: 0 0; }
 }
+ .para2{
+  color: red;
+  padding-bottom: 20px;
+  font-size: 18px;
+  font-weight: bolder;
+  text-shadow: 0 3px 0 #000000;
+ }
