--- a/style.css
+++ b/style.css
@@ -477,7 +477,6 @@ section strong {
   position: absolute;
   top: -2px;
   left:-2px;
-  background-size: 400%;
   z-index: -1;
   filter: blur(5px);
   width: calc(100% + 4px);
@@ -500,7 +499,7 @@ section strong {
   opacity: 1;
 }
 
-.glow-on-hover:after {
+/* .glow-on-hover:after {
   z-index: -1;
   content: '';
   position: absolute;
@@ -510,7 +509,7 @@ section strong {
   left: 0;
   top: 0;
   border-radius: 10px;
-}
+} */
 
 @keyframes glowing {
   0% { background-position: 0 0; }
