--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ button {
 section button {
   color: #000;
   text-decoration: none;
-  text-align: center;
+  text-align: center!important;
   padding: 10px;
   display: block;
   font-size: 1.3em;
@@ -415,6 +415,26 @@ section .hidden {
   border-bottom-right-radius: 20px;
 }
 
+.accordion-body{
+  background-color: rgba(0,0,0,0.8);
+  border: 4px solid rgb(47, 58, 69);
+  padding: 20px!important;
+  color: #fff;
+  letter-spacing: 2px;
+}
+.accordion-body p{
+  color: white;
+  text-align: justify;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 26px;
+  line-height: 35px;
+  letter-spacing: 1px;
+  font-family: 'Poppins', sans-serif;
+}
+.accordion-collapse {
+  background-color: rgba(0,0,0,0.8);
+}
 section:target .hidden {
   height: 100%;
   opacity: 1;
@@ -454,16 +474,18 @@ section strong {
   text-decoration: none; 
   font-size: 18px;
 }
+.visit:hover{
+  color: #000;
+}
 .glow-on-hover {
   margin-left: 50%;
-  margin-right: 50%;
   margin-bottom: 20px;
   width: auto;
   height: auto;
   font-size: 16px;
   border: none;
   outline: none;
-  color: #fff;
+  color: #000000!important;
   background: linear-gradient(315deg, #00ccff, #d400d4)!important;
   cursor: pointer;
   position: relative;
@@ -485,6 +507,7 @@ section strong {
   opacity: 0;
   transition: opacity .3s ease-in-out;
   border-radius: 10px;
+  color: #000!important;
 }
 
 .glow-on-hover:active {
@@ -535,4 +558,14 @@ button span {
   width: 35px;
   height: 35px;
   margin: 5px;
+}
+
+
+
+.accordion-item {
+  margin-bottom: 25px;
+}
+h2 b {
+  color: #ffffff;
+  padding-left: 20px;
 }
